# ai-engineer

./: .gitignore  AI应用工程学习计划.md  AI应用工程概念解读.md  README.md  原始计划.md
backend/: .env.dev  .env.prod  .gitignore  README.md  alembic.ini  main.py  pyproject.toml  requirements.txt
backend/alembic/: __init__.py  env.py
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py
backend/app/api/v1/: api.py
backend/app/config/: path_conf.py  settings.py
backend/app/core/: cors.py  database.py  deps.py  exception.py  logger.py  middleware.py  openai.py  permissions.py  redis.py  security.py
backend/app/crud/: base.py  crud_user.py
backend/app/enums/: llm.py  system.py
backend/app/mapper/: base.py
backend/app/mapper/llm/: chat_mapper.py
backend/app/mapper/system/: permission_mapper.py  role_mapper.py  role_permission_mapper.py  user_mapper.py  user_role_mapper.py
backend/app/models/: __init__.py  base.py  user.py
backend/app/models/llm/: __init__.py  chat.py
backend/app/models/system/: __init__.py  association.py  permission.py  role.py  user.py
backend/app/schemas/: base.py  user.py
backend/app/schemas/llm/: chat.py
backend/app/schemas/system/: __init__.py  auth.py  permission.py  role.py  user.py
backend/app/service/llm/: __init__.py  chat_service.py
backend/app/utils/: logger.py
backend/config/: exception.py
backend/docs/learning/: 01_配置管理.md  02_数据库集成.md  03_用户认证.md  04_日志系统.md  05_RESTful_API开发.md  06_测试框架.md  07_Docker容器化.md  08_项目启动配置.md  README.md
backend/scripts/: dbupgrade.sh  start.sh
frontend/: .gitignore
(+25 files in other folders)
